--- a/Mapsui.Rendering.Gdi/Mapsui.Rendering.Gdi.Net4.csproj
+++ b/Mapsui.Rendering.Gdi/Mapsui.Rendering.Gdi.Net4.csproj
@@ -59,6 +59,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="RasterRenderer.cs" />
     <Compile Include="MultiLineStringRenderer.cs" />
+    <Compile Include="StyleContext.cs" />
     <Compile Include="VisibleFeatureIterator.cs" />
   </ItemGroup>
   <ItemGroup>
