--- a/Mapsui.Rendering.Gdi/Mapsui.Rendering.Gdi.csproj
+++ b/Mapsui.Rendering.Gdi/Mapsui.Rendering.Gdi.csproj
@@ -58,6 +58,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="RasterRenderer.cs" />
     <Compile Include="MultiLineStringRenderer.cs" />
+    <Compile Include="StyleContext.cs" />
     <Compile Include="VisibleFeatureIterator.cs" />
   </ItemGroup>
   <ItemGroup>
