--- a/Samples/Mapsui.Samples.Common.Desktop/Mapsui.Samples.Common.Desktop.Net4.csproj
+++ b/Samples/Mapsui.Samples.Common.Desktop/Mapsui.Samples.Common.Desktop.Net4.csproj
@@ -153,12 +153,17 @@
       <Project>{8BD54487-8DB9-431A-9596-2DFD744887A1}</Project>
       <Name>Mapsui.Desktop.Net4</Name>
     </ProjectReference>
+    <ProjectReference Include="..\..\Mapsui.Rendering.Gdi\Mapsui.Rendering.Gdi.Net4.csproj">
+      <Project>{AAA56FF5-D130-461E-91F4-53100B686665}</Project>
+      <Name>Mapsui.Rendering.Gdi.Net4</Name>
+    </ProjectReference>
     <ProjectReference Include="..\..\Mapsui\Mapsui.Net4.csproj">
       <Project>{D74C052A-C07E-4B37-A898-134218ACA5C9}</Project>
       <Name>Mapsui.Net4</Name>
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
+    <None Include="app.config" />
     <None Include="app.net4.config" />
     <None Include="packages.config" />
   </ItemGroup>
