--- a/Samples/Mapsui.Samples.Wpf/Mapsui.Samples.Wpf.Net4.csproj
+++ b/Samples/Mapsui.Samples.Wpf/Mapsui.Samples.Wpf.Net4.csproj
@@ -135,7 +135,9 @@
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
     </EmbeddedResource>
-    <None Include="app.net4.config" />
+    <None Include="app.net4.config">
+      <SubType>Designer</SubType>
+    </None>
     <None Include="packages.config" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
