--- a/Mapsui/Mapsui.Net4.csproj
+++ b/Mapsui/Mapsui.Net4.csproj
@@ -48,6 +48,7 @@
     <Compile Include="Fetcher\IAsyncDataFetcher.cs" />
     <Compile Include="Fetcher\IFetchStrategy.cs" />
     <Compile Include="Fetcher\TileFetcher.cs" />
+    <Compile Include="Fetcher\TileFetcherLevelManager.cs" />
     <Compile Include="Geometries\NotifyingPoint.cs" />
     <Compile Include="Layers\AnimatedFeatures.cs" />
     <Compile Include="Layers\AnimatedPointLayer.cs" />
